# c-embedded-helpers

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
memqueue/: memqueue.c  memqueue.cmake  memqueue.h  memqueue_test.cpp
test/: gtest.cmake  test.cpp
